; ModuleID = '/home/carl/AnghaBench/linux/net/wireless/extr_chan.c_cfg80211_reg_can_beacon_relax.c'
source_filename = "/home/carl/AnghaBench/linux/net/wireless/extr_chan.c_cfg80211_reg_can_beacon_relax.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wiphy = type { i32 }
%struct.cfg80211_chan_def = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cfg80211_reg_can_beacon_relax(%struct.wiphy* %0, %struct.cfg80211_chan_def* %1, i32 %2) #0 {
  %4 = alloca %struct.wiphy*, align 8
  %5 = alloca %struct.cfg80211_chan_def*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.wiphy* %0, %struct.wiphy** %4, align 8
  store %struct.cfg80211_chan_def* %1, %struct.cfg80211_chan_def** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = call i32 (...) @ASSERT_RTNL()
  %9 = load %struct.wiphy*, %struct.wiphy** %4, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.cfg80211_chan_def*, %struct.cfg80211_chan_def** %5, align 8
  %12 = getelementptr inbounds %struct.cfg80211_chan_def, %struct.cfg80211_chan_def* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @cfg80211_ir_permissive_chan(%struct.wiphy* %9, i32 %10, i32 %13)
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  store i32 %17, i32* %7, align 4
  %18 = load %struct.wiphy*, %struct.wiphy** %4, align 8
  %19 = load %struct.cfg80211_chan_def*, %struct.cfg80211_chan_def** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @_cfg80211_reg_can_beacon(%struct.wiphy* %18, %struct.cfg80211_chan_def* %19, i32 %20, i32 %21)
  ret i32 %22
}

declare dso_local i32 @ASSERT_RTNL(...) #1

declare dso_local i32 @cfg80211_ir_permissive_chan(%struct.wiphy*, i32, i32) #1

declare dso_local i32 @_cfg80211_reg_can_beacon(%struct.wiphy*, %struct.cfg80211_chan_def*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
